[gd_scene load_steps=8 format=3 uid="uid://cnakvo04hvkgg"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_0n52c"]
[ext_resource type="Texture2D" uid="uid://dfwjsphgni7vl" path="res://graphics/player/player.png" id="1_61y5v"]
[ext_resource type="Texture2D" uid="uid://b317icmgjqbtg" path="res://graphics/decals/white.png" id="3_fbeq2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rvt25"]
radius = 57.0088

[sub_resource type="Gradient" id="Gradient_mmmpy"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_njplt"]
gradient = SubResource("Gradient_mmmpy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r6jce"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2000.0
initial_velocity_max = 3000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 10000.0
damping_max = 10000.0
color = Color(0.8, 0.94902, 0.976471, 0.513726)
color_ramp = SubResource("GradientTexture1D_njplt")
attractor_interaction_enabled = false

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_0n52c")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(0, -44)
texture = ExtResource("1_61y5v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rvt25")

[node name="PrimaryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SecondaryTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(20, -139)

[node name="GPUParticles2D" type="GPUParticles2D" parent="LaserStartPositions/Marker2D"]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_r6jce")
texture = ExtResource("3_fbeq2")
lifetime = 0.3
one_shot = true
explosiveness = 0.95
interpolate = false
fract_delta = false
trail_lifetime = 0.1
trail_sections = 100
trail_section_subdivisions = 50

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(12, -135)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(28, -135)

[connection signal="timeout" from="PrimaryTimer" to="." method="_on_primary_timer_timeout"]
[connection signal="timeout" from="SecondaryTimer" to="." method="_on_secondary_timer_timeout"]
